Employee UI show button change and EmployeeShow UI table desgine change and gitignore file some change

--- a/HR/Views/Employee/EmployeeShow.cshtml
+++ b/HR/Views/Employee/EmployeeShow.cshtml
@@ -6,6 +6,12 @@
 }
 
 <style>
+    .employee-wrapper {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 20px;
+    }
+
     .table thead th {
         background-color: #3498db;
         color: white;
@@ -49,7 +55,7 @@
     }
 </style>
 
-<div class="container-fluid" style="padding-left: 80px; padding-right: 80px;">
+<div class="employee-wrapper">
     <h2 class="title">Employee List</h2>
 
     <table class="table table-bordered table-striped table-hover">
