--- a/HR/Views/Employee/NewEmployee.cshtml
+++ b/HR/Views/Employee/NewEmployee.cshtml
@@ -117,12 +117,13 @@
         </div>*@
 
             <div class="text-center mt-4">
-                <button type="submit" class="btn btn-primary px-4">Create</button>
+                <button type="submit" class="btn btn-primary px-4 py-2">Create</button>
 
-                <a href="@Url.Action("EmployeeShow", "Employee")" class="btn btn-success px-4" style="height: 55px; line-height: 26px; vertical-align: middle;">
+                <a href="@Url.Action("EmployeeShow", "Employee")" class="btn btn-success px-4 py-2 ms-2">
                     Show
                 </a>
             </div>
+
 
 
 
